Konfiguriran Software direktorij i path za slike u main tex-u

--- a/Rektor_2017/Software/Software.tex
+++ b/Rektor_2017/Software/Software.tex
@@ -149,7 +149,7 @@
 \usepackage{tocloft}
 \usepackage{import}
 \usepackage{standalone}
-\graphicspath{{Uvod/}, {Ciljevi/}, {Materijal/}, {Rasprava/}, {Rezultati/}} 
+\graphicspath{{Software/Slike/}{../Software/Slike/}}
 
 \hypersetup{
   colorlinks   = true, %Colours links instead of ugly boxes
@@ -161,7 +161,21 @@
 \usepackage{subcaption}
 \usepackage{lscape}
 \begin{document}
+	
+U sklopu razvoja letjelice razvijena je potrebna programska podrška. Zbog specifičnosti ovakvog pristupa upravljanju multirotorskim letjelicama postojeća programska rješenja ne zadovoljavaju specifične zahtjeve ovakvog načina upravljanja. Stoga je razvijeno vlastito programsko rješenje za predstavljeni problem. Zbog specifične sklopovske arhitekture letjelice, razvijena je programska potpora za dva različita sustava: kontroler pomičnih masa i Pixhawk kontroler leta.
 
-SOFTWARE - MATIJA
+
+\subsection{Programska podrška za kontroler koračnih motora}
+Slike i tako nešto
+\begin{center}
+	\centering
+	\includegraphics[width=1\textwidth]{{data_flow_diagram}.PNG}
+	\captionof{figure}{Prikaz tokova podataka u SCU programskoj podršci}
+	\label{fig:}
+\end{center}
+
+\subsection{Programska podrška za Pixhawk kontroler leta}
+Podpoglavlje
+
 
 \end{document}
