--- a/Rektor_2017/rektor_2017.tex
+++ b/Rektor_2017/rektor_2017.tex
@@ -149,7 +149,8 @@
 \usepackage{tocloft}
 \usepackage{import}
 \usepackage{standalone}
-\graphicspath{{Uvod/figures/}, {CAD/}, {Exp/}, {Hardware/}, {Software/}, {Identifikacija/}, {Koncept/}, {Model/}} 
+
+\graphicspath{{Uvod/}, {CAD/}, {Exp/}, {Hardware/}, {Software/}, {Identifikacija/}, {Koncept/}, {Model/}, {Software/Slike/}}
 
 \hypersetup{
   colorlinks   = true, %Colours links instead of ugly boxes
@@ -251,7 +252,7 @@ Zagreb, \the\year
 
 \newpage
 \section{Softwareska struktura}
-\section{Software}
+\input{Software/Software}
 
 \newpage
 \section{Eksperimentalno testiranje}
