--- a/Rektor_2017/rektor_2017.tex
+++ b/Rektor_2017/rektor_2017.tex
@@ -150,7 +150,7 @@
 \usepackage{import}
 \usepackage{standalone}
 
-\graphicspath{{Uvod/}, {CAD/}, {Exp/}, {Hardware/}, {Software/}, {Identifikacija/}, {Koncept/}, {Model/}, {Software/Slike/}}
+\graphicspath{{Uvod/}, {CAD/}, {Exp/}, {Hardware/}, {Software/}, {Identifikacija/}, {Koncept/}, {Model/}, {Software/Slike/}, {Hardware/figures/},{CAD/figures/}, {Uvod/figures/}}
 
 \hypersetup{
   colorlinks   = true, %Colours links instead of ugly boxes
@@ -251,7 +251,7 @@ Zagreb, \the\year
 \input{Hardware/Hardware}
 
 \newpage
-\section{Softwareska struktura}
+\section{Programska struktura}
 \input{Software/Software}
 
 \newpage
