Modified Software.tex, Added to Pixhawk section

--- a/Rektor_2017/Software/Software.tex
+++ b/Rektor_2017/Software/Software.tex
@@ -197,7 +197,7 @@ ostvaren je upravljački algoritam motora, modulom MSG\_DECODE\_TASK dekodira se
 cjeline, a sa ostalim modula komuniciraju korištenjem redova poruka (eng. \textit{message queues}). Cjeloviti programski kod je javno dostupan na GitHub servisu. %TODO: dodaj referencu na dodatak u kojem stoji link na github repo
 
 \subsection{Programska podrška za Pixhawk kontroler leta}
-Podpoglavlje
+Pixhawk kontroler leta je komercijalno dostupan sklop koji u paketu dolazi s vlastitim programskim kodom. Programski kod Pixhawk kontrolera (\textit{PX4 firmware}) prilagođen je sklopovskoj platformi na kojoj se nalazi i omogućuje upravljanje velikim brojem letjelica različite konfiguracije. Iako podržava velik broj konfiguracija letjelica, PX4 ne pruža gotovo rješenje za specifičan način upravljanja prikazan u ovom radu. PX4 je programsko rješenje otvorenog koda i dozvoljeno je raditi modifikacije programskog koda prema BSD licenci. PX4 programska platforma je modularna te nije potrebno razvijati cjelokupnu programsku potporu već samo module specifične za upravljanje zasnovano na pomičnim masama.
 
 
 \end{document}
