Koncept and Model modif.

--- a/Rektor_2017/Koncept/Koncept.tex
+++ b/Rektor_2017/Koncept/Koncept.tex
@@ -170,10 +170,12 @@ Kao što je spomenuto u uvodu ovog rada, cilj je dizajnirati i razviti laborator
 Promjena centra mase letjelice postiže se promjenom pozicije pomičnih masa smještenih na krakove letjelice. Ta promjena uzrokuje nastanak momenata kuteva  valjanja (\textit{roll}) i poniranja (\textit{pitch}), što zauzvrat služi za kontrolu pozicije letjelice. Grafički prikaz uzroka i posljedice ovog koncepta upravljanja prikazan je slikom \ref{kontrol}. Kako bi upravljanje bilo linearno nezavisno, multirotorska letjelica mora biti konstruirana u standardnoj \textit{plus konfiguraciji}. \cite{haus1}
 
 \bigskip
-DODATI SLIKU
+DODATI SLIKU KAKO SE KVAD NAGNE KAD SE POMAKNE MASA
 
 Bitno je naglasiti kako se za upravljanje visine letjelice te kuta njezinog zakreta i dalje koristi klasična metoda upravljanja, ona zasnovana na promjeni brzine vrtnje propelera. U nastavku ovog rada glavni će fokus biti na novom konceptu upravljanja. 
 
+\bigskip
 
+DODATI SLIKU UPRAVLJANJA MASA PLUS PROPELER
 
 \end{document}
