--- a/Rektor_2017/Uvod/Uvod.tex
+++ b/Rektor_2017/Uvod/Uvod.tex
@@ -187,6 +187,6 @@ Instinktivno je jasno kako su na ovakvu letjelicu postavljeni strogi uvjeti veza
 
 \medskip
 
-Benzinski motori, unatoč svojim prednostima, otežavaju testiranje jednog ovakvog sustava. Za pokretanje kompleksnog sustava ovih razmjera potrebna je pomno planirana i vremenski dugotrajna priprema. Sami benzinski motori stvaraju buku i ispušne plinove te zahtjevaju pokretanje na otvorenom. U tu svrhu javlja se potreba za izradom laboratorijske makete letjelice. Glavna je motivacija biti u mogućnosti testirati algoritme upravljanja u laboratorijskim uvjetima. Ovaj rad stoga nastoji doprinjeti dizajnu i razvoju jedne takve letjelice te primjeniti i testirati novi koncept upravljanja bespilotnom letjelicom zasnovan na promjeni centra mase letjelice. 
+Benzinski motori, unatoč svojim prednostima, otežavaju testiranje jednog ovakvog sustava. Za pokretanje kompleksnog sustava ovih razmjera potrebna je pomno planirana i vremenski dugotrajna priprema. Sami benzinski motori stvaraju buku i ispušne plinove te zahtijevaju pokretanje na otvorenom. U tu svrhu javlja se potreba za izradom laboratorijske makete letjelice. Glavna je motivacija biti u mogućnosti testirati algoritme upravljanja u laboratorijskim uvjetima. Ovaj rad stoga nastoji doprinijeti dizajnu i razvoju jedne takve letjelice te primijeniti i testirati novi koncept upravljanja bespilotnom letjelicom zasnovan na promjeni centra mase letjelice. 
 
 \end{document}
