Added measurements .csv files and Matlab script
Matlab script plots only the good part of the measurements

--- a/Rektor_2017/Exp/Exp.tex
+++ b/Rektor_2017/Exp/Exp.tex
@@ -175,7 +175,7 @@ Ovim pristupom omogućeno je fino podešavanje koeficijenata regulacijskih petlj
 \setlength\extrarowheight{1pt}
 \begin{table}[H]
 	\centering
-	\caption{Parametri regulator}
+	\caption{Parametri regulatora}
 	\label{tab:reg_param}
 	\begin{tabular}{|C{1cm}|C{1cm}|C{1cm}||C{1cm}|C{1cm}|C{1cm}|}
 		\hline
